--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Boxicons CSS--->
+
+    <!--Box icons --->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Web site responsive</title>
 </head>
 <body>
+    <!--Scroll Top-->
 
+    <!--Header-->    
     <header class="1-header" id="header">
 
     </header>
@@ -24,6 +30,7 @@
     </footer>
 
     <!--Scroll Reveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--Main JS-->
     <script src="assets/js/main.js"></script>
