--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
     <!--Scroll Top-->
 
     <!--Header-->    
-    <header class="1-header" id="header">
-        nav class="nav bd-container">
-                <a href="#" class="nav__logo">Christmas Gift</a>
+    <header class="l-header" id="header">
+        <nav class="nav bd-container">
+            <a href="#" class="nav__logo">Web site</a>
 
-                <div class="nav__menu" id="nav-menu">
-                    <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                        <li class="nav__item"><a href="#share" class="nav__link">Share</a></li>
-                        <li class="nav__item"><a href="#decoration" class="nav__link">Decorations</a></li>
-                        <li class="nav__item"><a href="#accessory" class="nav__link">Accessory</a></li>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
+                    <li class="nav__item"><a href="#share" class="nav__link">Share</a></li>
+                    <li class="nav__item"><a href="#decoration" class="nav__link">Decorations</a></li>
+                    <li class="nav__item"><a href="#accessory" class="nav__link">Accessory</a></li>
 
-                        <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
-                    </ul>
-                </div>
+                    <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
+                </ul>
+            </div>
 
-                <div class="nav__toggle" id="nav-toggle">
-                    <i class='bx bx-grid-alt'></i>
-                </div>
-            </nav>
-
+            <div class="nav__toggle" id="nav-toggle">
+                <i class='bx bx-grid-alt'></i>
+            </div>
+        </nav>
     </header>
     <main class="1-main">
 
