--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
     <!--Scroll Top-->
+    <a href="#" class="scrolltop" id="scroll-top">
+        <i class='bx bx-up-arrow-alt scrolltop__icon'></i>
+    </a>
 
     <!--Header-->    
     <header class="l-header" id="header">
@@ -38,6 +41,20 @@
         </nav>
     </header>
     <main class="1-main">
+           <!--========== HOME ==========-->
+           <section class="home" id="home">
+            <div class="home__container bd-container bd-grid">
+                <div class="home__img">
+                    <img src="assets/img/home.png" alt="">
+                </div>
+
+                <div class="home__data">
+                    <h1 class="home__title">Send A Gift For Christmas</h1>
+                    <p class="home__description">In these end of the year holidays send a gift to your loved one and share the happiness at Christmas.</p>
+                    <a href="#" class="button">Get Started</a>
+                </div>   
+            </div>
+        </section>
 
     </main>
 
