create sessão decoração

--- a/index.html
+++ b/index.html
@@ -58,17 +58,41 @@
 
         <!--========== SHARE ==========-->
         <section class="share section bd-container" id="share">
-                <div class="share__container bd-grid">
-                    <div class="share__data">
-                        <h2 class="section-title-center">Sharing Is The Best Gift <br> You Can Give</h2>
-                        <p class="share__description">Sharing these holidays is the best gift you can give, give a present or share your love with the people you love the most and celebrate with great happiness.</p>
-                        <a href="#" class="button">Send a Gift</a>
-                    </div>
+            <div class="share__container bd-grid">
+                <div class="share__data">
+                    <h2 class="section-title-center">Sharing Is The Best Gift <br> You Can Give</h2>
+                    <p class="share__description">Sharing these holidays is the best gift you can give, give a present or share your love with the people you love the most and celebrate with great happiness.</p>
+                    <a href="#" class="button">Send a Gift</a>
+                </div>
 
                     <div class="share__img">
                         <img src="assets/img/shared.png" alt="">
                     </div>
+            </div>
+        </section>
+
+        <!--========== DECORATION ==========-->
+        <section class="decoration section bd-container" id="decoration">
+            <h2 class="section-title">Give Christmas Decorations <br> For Your Home</h2>
+            <div class="decoration__container bd-grid">
+                <div class="decoration__data">
+                    <img src="assets/img/decoration1.png" alt="" class="decoration__img">
+                    <h3 class="decoration__title">Christmas Bells</h3>
+                    <a href="#" class="button button-link">Go Shopping</a>
                 </div>
+
+                <div class="decoration__data">
+                    <img src="assets/img/decoration2.png" alt="" class="decoration__img">
+                    <h3 class="decoration__title">Christmas Candies</h3>
+                    <a href="#" class="button button-link">Go Shopping</a>
+                </div>
+
+                <div class="decoration__data">
+                    <img src="assets/img/decoration3.png" alt="" class="decoration__img">
+                    <h3 class="decoration__title">Christmas Trees</h3>
+                    <a href="#" class="button button-link">Go Shopping</a>
+                </div>
+            </div>
         </section>
 
     </main>
