inserindo imagens sessão decoration

--- a/index.html
+++ b/index.html
@@ -73,27 +73,47 @@
 
         <!--========== DECORATION ==========-->
         <section class="decoration section bd-container" id="decoration">
-            <h2 class="section-title">Give Christmas Decorations <br> For Your Home</h2>
+            <h2 class="section-title">Give Decorations <br> For Your Home</h2>
             <div class="decoration__container bd-grid">
                 <div class="decoration__data">
                     <img src="assets/img/decoration1.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Christmas Bells</h3>
+                    <h3 class="decoration__title">Bells</h3>
                     <a href="#" class="button button-link">Go Shopping</a>
                 </div>
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration2.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Christmas Candies</h3>
+                    <h3 class="decoration__title">Candies</h3>
                     <a href="#" class="button button-link">Go Shopping</a>
                 </div>
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration3.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Christmas Trees</h3>
+                    <h3 class="decoration__title">Trees</h3>
                     <a href="#" class="button button-link">Go Shopping</a>
                 </div>
             </div>
         </section>
+  <!--========== ACCESSORIES ==========-->
+        <section class="accessory section bd-container" id="accessory">
+            <h2 class="section-title">New <br> Accessories</h2>
+
+            <div class="accessory__container bd-grid">
+                <div class="accessory__content">
+                    <img src="assets/img/accessory1.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Snow Globe</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__preci">$9.45</span>
+                    <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                </div>
+
+                <div class="accessory__content">
+                    <img src="assets/img/accessory2.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Candy</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__preci">$2.52</span>
+                    <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                </div>
 
     </main>
 
