create sessão acessorios

--- a/index.html
+++ b/index.html
@@ -94,26 +94,53 @@
                 </div>
             </div>
         </section>
-  <!--========== ACCESSORIES ==========-->
+
+        <!--========== ACCESSORIES ==========-->
         <section class="accessory section bd-container" id="accessory">
-            <h2 class="section-title">New <br> Accessories</h2>
+            <h2 class="section-title">New Christmas <br> Accessories</h2>
 
             <div class="accessory__container bd-grid">
-                <div class="accessory__content">
-                    <img src="assets/img/accessory1.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Snow Globe</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__preci">$9.45</span>
-                    <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
-                </div>
+                    <div class="accessory__content">
+                        <img src="assets/img/accessory1.png" alt="" class="accessory__img">
+                        <h3 class="accessory__title">Snow Globe</h3>
+                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__preci">$9.45</span>
+                        <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                    </div>
 
-                <div class="accessory__content">
-                    <img src="assets/img/accessory2.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Candy</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__preci">$2.52</span>
-                    <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                    <div class="accessory__content">
+                        <img src="assets/img/accessory2.png" alt="" class="accessory__img">
+                        <h3 class="accessory__title">Candy</h3>
+                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__preci">$2.52</span>
+                        <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                    </div>
+
+                    <div class="accessory__content">
+                        <img src="assets/img/accessory3.png" alt="" class="accessory__img">
+                        <h3 class="accessory__title">Angel</h3>
+                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__preci">$13.15</span>
+                        <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                    </div>
+
+                    <div class="accessory__content">
+                        <img src="assets/img/accessory4.png" alt="" class="accessory__img">
+                        <h3 class="accessory__title">Sphere</h3>
+                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__preci">$4.25</span>
+                        <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
+                    </div>
+
+                    <div class="accessory__content">
+                        <img src="assets/img/accessory5.png" alt="" class="accessory__img">
+                        <h3 class="accessory__title">Surprise gift</h3>
+                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__preci">$7.99</span>
+                        <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                 </div>
+            </div>
+        </section>
 
     </main>
 
