--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="accessory__container bd-grid">
                     <div class="accessory__content">
                         <img src="assets/img/accessory1.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Snow Globe</h3>
+                        <h3 class="accessory__title">Car</h3>
                         <span class="accessory__category">Accessory</span>
                         <span class="accessory__preci">$9.45</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
@@ -110,7 +110,7 @@
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory2.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Candy</h3>
+                        <h3 class="accessory__title">Motorcycle</h3>
                         <span class="accessory__category">Accessory</span>
                         <span class="accessory__preci">$2.52</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
@@ -118,7 +118,7 @@
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory3.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Angel</h3>
+                        <h3 class="accessory__title">Snowmobile</h3>
                         <span class="accessory__category">Accessory</span>
                         <span class="accessory__preci">$13.15</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
@@ -126,7 +126,7 @@
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory4.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Sphere</h3>
+                        <h3 class="accessory__title">Bicycle</h3>
                         <span class="accessory__category">Accessory</span>
                         <span class="accessory__preci">$4.25</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
@@ -134,7 +134,7 @@
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory5.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Surprise gift</h3>
+                        <h3 class="accessory__title">Motorbike trailer</h3>
                         <span class="accessory__category">Accessory</span>
                         <span class="accessory__preci">$7.99</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
