create sessão enviar

--- a/index.html
+++ b/index.html
@@ -141,6 +141,27 @@
                 </div>
             </div>
         </section>
+      <!--========== SEND GIFT ==========-->
+      <section class="send section">
+        <div class="send__container bd-container bd-grid">
+            <div class="send__content">
+                <h2 class="section-title-center send__title">Send Gift Now</h2>
+                <p class="send__description">Start giving away before the holidays are over. Write the home address of the person who will send the gift.</p>
+                <form action="">
+                    <div class="send__direction">
+                        <input type="text" placeholder="House address" class="send__input">
+                        <a href="#" class="button">Send</a>
+                    </div>
+                </form>
+            </div>
+
+            <div class="send__img">
+                <img src="assets/img/send.png" alt="">
+            </div>
+        </div>
+    </section>
+</main>
+
 
     </main>
 
