--- a/index.html
+++ b/index.html
@@ -162,12 +162,43 @@
     </section>
 </main>
 
-
-    </main>
-
-    <!--Footer-->
+    <!--========== FOOTER ==========-->
     <footer class="footer section">
+        <div class="footer__container bd-container bd-grid">
+            <div class="footer__content">
+                <h3 class="footer__title">
+                    <a href="#" class="footer__logo">Gift</a>
+                </h3>
+                <p class="footer__description">I sent a gift and it gives <br> happiness</p>
+            </div>
 
+            <div class="footer__content">
+                <h3 class="footer__title">Our Services</h3>
+                <ul>
+                    <li><a href="#" class="footer__link">Pricing </a></li>
+                    <li><a href="#" class="footer__link">Discounts</a></li>
+                    <li><a href="#" class="footer__link">Shipping mode</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__content">
+                <h3 class="footer__title">Our Company</h3>
+                <ul>
+                    <li><a href="#" class="footer__link">Blog</a></li>
+                    <li><a href="#" class="footer__link">About us</a></li>
+                    <li><a href="#" class="footer__link">Our mision</a></li>
+                </ul>
+            </div>
+
+            <div class="footer__content">
+                <h3 class="footer__title">Social</h3>
+                <a href="#" class="footer__social"><i class='bx bxl-facebook-circle '></i></a>
+                <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
+                <a href="#" class="footer__social"><i class='bx bxl-instagram-alt'></i></a>
+            </div>
+        </div>
+
+        <p class="footer__copy">&#169; 2021 Bedimcode. All right reserved</p>
     </footer>
 
     <!--Scroll Reveal-->
@@ -176,5 +207,5 @@
     <!--Main JS-->
     <script src="assets/js/main.js"></script>
     
-</body>
+    </body>
 </html>
