--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Web site responsive</title>
+    <title>Web-site responsive</title>
 </head>
 <body>
     <!--Scroll Top-->
@@ -26,10 +26,10 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                    <li class="nav__item"><a href="#share" class="nav__link">Share</a></li>
-                    <li class="nav__item"><a href="#decoration" class="nav__link">Decorations</a></li>
-                    <li class="nav__item"><a href="#accessory" class="nav__link">Accessory</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Início</a></li>
+                    <li class="nav__item"><a href="#share" class="nav__link">Compartilhar</a></li>
+                    <li class="nav__item"><a href="#decoration" class="nav__link">Decorações</a></li>
+                    <li class="nav__item"><a href="#accessory" class="nav__link">Acessórios</a></li>
 
                     <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                 </ul>
@@ -49,20 +49,20 @@
                 </div>
 
                 <div class="home__data">
-                    <h1 class="home__title">Send A Gift</h1>
-                    <p class="home__description">In these end of the year holidays send a gift to your loved one and share the happiness at Christmas.</p>
-                    <a href="#" class="button">Get Started</a>
+                    <h1 class="home__title">Enviar um Presente</h1>
+                    <p class="home__description">Nestas férias de fim de ano, envie um presente ao seu ente querido e partilhe a felicidade.</p>
+                    <a href="#" class="button">Enviar um Presente</a>
                 </div>   
             </div>
         </section>
 
-        <!--========== SHARE ==========-->
+        <!--========== Compartilhar ==========-->
         <section class="share section bd-container" id="share">
             <div class="share__container bd-grid">
                 <div class="share__data">
-                    <h2 class="section-title-center">Sharing Is The Best Gift <br> You Can Give</h2>
-                    <p class="share__description">Sharing these holidays is the best gift you can give, give a present or share your love with the people you love the most and celebrate with great happiness.</p>
-                    <a href="#" class="button">Send a Gift</a>
+                    <h2 class="section-title-center">Compartilhar é a melhor prenda que <br> você pode dar</h2>
+                    <p class="share__description">Compartilhar estas férias é o melhor presente que pode dar, dar um presente ou partilhar o seu amor com as pessoas que mais ama e celebrar com grande felicidade.</p>
+                    <a href="#" class="button">Enviar um Presente</a>
                 </div>
 
                     <div class="share__img">
@@ -71,47 +71,47 @@
             </div>
         </section>
 
-        <!--========== DECORATION ==========-->
+        <!--========== Decorações ==========-->
         <section class="decoration section bd-container" id="decoration">
-            <h2 class="section-title">Give Decorations <br> For Your Home</h2>
+            <h2 class="section-title">Decorações <br> Para a sua casa</h2>
             <div class="decoration__container bd-grid">
                 <div class="decoration__data">
                     <img src="assets/img/decoration1.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Bells</h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <h3 class="decoration__title">Surpresa</h3>
+                    <a href="#" class="button button-link">Ir às compras</a>
                 </div>
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration2.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Candies</h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <h3 class="decoration__title">Vazo de planta</h3>
+                    <a href="#" class="button button-link">Ir às compras</a>
                 </div>
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration3.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Trees</h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <h3 class="decoration__title">Surpresa</h3>
+                    <a href="#" class="button button-link">Ir às compras</a>
                 </div>
             </div>
         </section>
 
-        <!--========== ACCESSORIES ==========-->
+        <!--========== ACESSORIOS ==========-->
         <section class="accessory section bd-container" id="accessory">
-            <h2 class="section-title">New Christmas <br> Accessories</h2>
+            <h2 class="section-title">Novos<br> Acessórios</h2>
 
             <div class="accessory__container bd-grid">
                     <div class="accessory__content">
                         <img src="assets/img/accessory1.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Car</h3>
-                        <span class="accessory__category">Accessory</span>
+                        <h3 class="accessory__title">Carro</h3>
+                        <span class="accessory__category">Acessório</span>
                         <span class="accessory__preci">$9.45</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                     </div>
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory2.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Motorcycle</h3>
-                        <span class="accessory__category">Accessory</span>
+                        <h3 class="accessory__title">Motocicleta</h3>
+                        <span class="accessory__category">Acessório</span>
                         <span class="accessory__preci">$2.52</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                     </div>
@@ -119,15 +119,15 @@
                     <div class="accessory__content">
                         <img src="assets/img/accessory3.png" alt="" class="accessory__img">
                         <h3 class="accessory__title">Snowmobile</h3>
-                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__category">Acessório</span>
                         <span class="accessory__preci">$13.15</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                     </div>
 
                     <div class="accessory__content">
                         <img src="assets/img/accessory4.png" alt="" class="accessory__img">
-                        <h3 class="accessory__title">Bicycle</h3>
-                        <span class="accessory__category">Accessory</span>
+                        <h3 class="accessory__title">Bicicleta</h3>
+                        <span class="accessory__category">Acessório</span>
                         <span class="accessory__preci">$4.25</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                     </div>
@@ -135,22 +135,22 @@
                     <div class="accessory__content">
                         <img src="assets/img/accessory5.png" alt="" class="accessory__img">
                         <h3 class="accessory__title">Motorbike trailer</h3>
-                        <span class="accessory__category">Accessory</span>
+                        <span class="accessory__category">Acessório</span>
                         <span class="accessory__preci">$7.99</span>
                         <a href="#" class="button accessory__button"><i class='bx bx-heart'></i></a>
                 </div>
             </div>
         </section>
-      <!--========== SEND GIFT ==========-->
+      <!--========== ENVIAR PRESENTE ==========-->
       <section class="send section">
         <div class="send__container bd-container bd-grid">
             <div class="send__content">
-                <h2 class="section-title-center send__title">Send Gift Now</h2>
-                <p class="send__description">Start giving away before the holidays are over. Write the home address of the person who will send the gift.</p>
+                <h2 class="section-title-center send__title">Enviar Presente Agora</h2>
+                <p class="send__description">Escrever o endereço da casa da pessoa que vai enviar o presente.</p>
                 <form action="">
                     <div class="send__direction">
-                        <input type="text" placeholder="House address" class="send__input">
-                        <a href="#" class="button">Send</a>
+                        <input type="text" placeholder="Endereço" class="send__input">
+                        <a href="#" class="button">Enviar</a>
                     </div>
                 </form>
             </div>
@@ -167,26 +167,26 @@
         <div class="footer__container bd-container bd-grid">
             <div class="footer__content">
                 <h3 class="footer__title">
-                    <a href="#" class="footer__logo">Gift</a>
+                    <a href="#" class="footer__logo">Presente</a>
                 </h3>
-                <p class="footer__description">I sent a gift and it gives <br> happiness</p>
+                <p class="footer__description">Enviei um presente<br> felicidades</p>
             </div>
 
             <div class="footer__content">
-                <h3 class="footer__title">Our Services</h3>
+                <h3 class="footer__title">Os nossos serviços</h3>
                 <ul>
-                    <li><a href="#" class="footer__link">Pricing </a></li>
-                    <li><a href="#" class="footer__link">Discounts</a></li>
-                    <li><a href="#" class="footer__link">Shipping mode</a></li>
+                    <li><a href="#" class="footer__link">Preços</a></li>
+                    <li><a href="#" class="footer__link">Descontos</a></li>
+                    <li><a href="#" class="footer__link">Modo de envio</a></li>
                 </ul>
             </div>
 
             <div class="footer__content">
-                <h3 class="footer__title">Our Company</h3>
+                <h3 class="footer__title">A nossa empresa</h3>
                 <ul>
                     <li><a href="#" class="footer__link">Blog</a></li>
-                    <li><a href="#" class="footer__link">About us</a></li>
-                    <li><a href="#" class="footer__link">Our mision</a></li>
+                    <li><a href="#" class="footer__link">Sobre nós</a></li>
+                    <li><a href="#" class="footer__link">A nossa missão</a></li>
                 </ul>
             </div>
 
@@ -198,10 +198,10 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2021 Bedimcode. All right reserved</p>
+        <p class="footer__copy">&#169; 2022. Todos os direitos reservados</p>
     </footer>
 
-    <!--Scroll Reveal-->
+    <!--ScrollReveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--Main JS-->
