--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Início</a></li>
-                    <li class="nav__item"><a href="#share" class="nav__link">Compartilhar</a></li>
-                    <li class="nav__item"><a href="#decoration" class="nav__link">Decorações</a></li>
-                    <li class="nav__item"><a href="#accessory" class="nav__link">Acessórios</a></li>
+                    <li class="nav__item"><a href="#compartilhar" class="nav__link">Compartilhar</a></li>
+                    <li class="nav__item"><a href="#decoracoes" class="nav__link">Decorações</a></li>
+                    <li class="nav__item"><a href="#acessorios" class="nav__link">Acessórios</a></li>
 
                     <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                 </ul>
@@ -83,13 +83,13 @@
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration2.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Vazo de planta</h3>
+                    <h3 class="decoration__title">Vaso</h3>
                     <a href="#" class="button button-link">Ir às compras</a>
                 </div>
 
                 <div class="decoration__data">
                     <img src="assets/img/decoration3.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">Surpresa</h3>
+                    <h3 class="decoration__title">Caixa</h3>
                     <a href="#" class="button button-link">Ir às compras</a>
                 </div>
             </div>
